fix description line spacing

--- a/css/style.css
+++ b/css/style.css
@@ -185,15 +185,16 @@ a:hover {
     font-style: italic;
     text-align: center;
     margin-top: 0.25rem;
-    margin-bottom: 0;
+    margin-bottom: 0.25rem;
 }
 
 .featureDescription {
     font-size: 1rem;
     font-weight: normal;
     text-align: center;
+    line-height: 1.1rem;
     margin-top: -0.25rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .featureViewAll {
